cambios a;adidos mas componentes, ok

--- a/index.html
+++ b/index.html
@@ -124,15 +124,41 @@
             <button class="slider-nav next-btn">&gt;</button>
         </div>
     </section>
-    <div class="scroll-indicator-section">
-        <div class="arrow-down">↓</div>
-    </div>
-
-
-
 
     
-    <div class="spacer"></div>
+    <section class="video-full-section">
+        <video class="full-video" autoplay muted loop playsinline>
+            <source src="assets/stitch/v2.mp4" type="video/mp4">
+        </video>
+        <div class="video-overlay"></div>
+    </section>
+    
+    <section class="studio-section">
+        <div class="studio-title">
+            <h1>El proceso detrás de la magia</h1>
+        </div>
+        <div class="studio-content">
+            <div class="studio-image">
+                <img src="assets/stitch/37.jpg" alt="Studio Process">
+            </div>
+            <div class="studio-image">
+                <img src="assets/stitch/38.jpg" alt="Studio Process">
+            </div>
+            <div class="studio-image">
+                <img src="assets/stitch/39.jpg" alt="Studio Process">
+            </div>
+            <div class="studio-image">
+                <img src="assets/stitch/40.jpg" alt="Studio Process">
+            </div>
+            <div class="studio-image">
+                <img src="assets/stitch/42.jpg" alt="Studio Process">
+            </div>
+            <div class="studio-image">
+                <img src="assets/stitch/41.jpg" alt="Studio Process">
+            </div>
+        </div>
+    </section>
+
     <script src="js/lenis-config.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/slider.js"></script>
