--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <section id="video-hero" class="video-section">
         <video id="hero-video" autoplay muted loop playsinline>
+            <source src="assets/stitch/v1-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
             <source src="assets/stitch/v1.mp4" type="video/mp4">
         </video>
         <div class="hero-title">
@@ -128,10 +129,171 @@
     
     <section class="video-full-section">
         <video class="full-video" autoplay muted loop playsinline>
+            <source src="assets/stitch/v2-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
             <source src="assets/stitch/v2.mp4" type="video/mp4">
         </video>
-        <div class="video-overlay"></div>
     </section>
+
+
+    <section class="collection-section">
+        <h2 class="collection-title">El Resto De Mi Colección</h2>
+        <div class="collection-grid">
+            <div class="collection-item">
+                <img src="assets/stitch/7.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/8.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/9.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/75.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/70.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/72.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/73.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/74.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/76.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/77.jpg" alt="Stitch Collection">
+            </div>
+
+            <div class="collection-item">
+                <img src="assets/stitch/78.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/79.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/80.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/81.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/82.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/83.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/84.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/85.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/86.jpg" alt="Stitch Collection">
+            </div>
+
+            <div class="collection-item">
+                <img src="assets/stitch/87.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/88.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/89.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/90.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/91.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/65.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/66.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/67.jpg" alt="Stitch Collection">
+            </div>
+
+            <div class="collection-item">
+                <img src="assets/stitch/59.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/68.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/69.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/51.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/52.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/53.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/54.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/55.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/56.jpg" alt="Stitch Collection">
+            </div>
+
+            <div class="collection-item">
+                <img src="assets/stitch/57.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/58.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/50.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/3.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/4.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/5.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/6.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/44.jpg" alt="Stitch Collection">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/45.jpg" alt="Stitch Collection">
+            </div>
+        </div>
+        <div class="spacer"></div>
+
+
+    <section class="video-audio-section">
+        <video class="video-with-audio" loop>
+            <source src="assets/stitch/v3.mp4" type="video/mp4">
+        </video>
+    </section>
+    <div class="spacer"></div>
+
+    <section class="full-width-section-">
+        <div class="full-width-image-">
+            <img src="assets/stitch/100.jpg" alt="Stitch Wide Image">
+        </div>
+    </section>
+    <div class="spacer"></div>
     
     <section class="studio-section">
         <div class="studio-title">
@@ -156,12 +318,37 @@
             <div class="studio-image">
                 <img src="assets/stitch/41.jpg" alt="Studio Process">
             </div>
+            <div class="studio-image">
+                <img src="assets/stitch/33.jpg" alt="Studio Process">
+            </div>
+            <div class="studio-image">
+                <img src="assets/stitch/34.jpg" alt="Studio Process">
+            </div>
         </div>
+    </section>
+    <div class="spacer"></div>
+
+    <section class="video-message-section">
+        <video class="message-video" autoplay muted loop playsinline>
+            <source src="assets/kory.mp4" type="video/mp4">
+        </video>
     </section>
 
     <script src="js/lenis-config.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/main.js"></script>
+
+    <footer class="site-footer">
+        <div class="footer-content">
+            <p>© 2025 Colección Stitch</p>
+            <div class="footer-divider">|</div>
+            <p>Con 💙 para Nikol Daniela</p>
+        </div>
+        <div class="footer-credit">
+            Diseñado por <a href="https://newwwebsite.com" target="_blank">neWWWebsite.com</a>
+        </div>
+        <button id="scroll-to-top" class="scroll-to-top-btn" aria-label="Volver al inicio">↑</button>
+    </footer>
 </body>
 </html>
