--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.27/bundled/lenis.min.js"></script> 
 </head>
 <body>
+    <div id="loading-screen" class="loading-screen">
+        <div class="loading-content">
+            <div class="stitch-loader">
+                <svg class="stitch-icon" viewBox="0 0 100 100">
+                    <path d="M50 15c-19.33 0-35 15.67-35 35s15.67 35 35 35 35-15.67 35-35S69.33 15 50 15zm0 60c-13.79 0-25-11.21-25-25s11.21-25 25-25 25 11.21 25 25-11.21 25-25 25z"/>
+                    <circle class="stitch-eye left" cx="35" cy="45" r="5"/>
+                    <circle class="stitch-eye right" cx="65" cy="45" r="5"/>
+                    <path class="stitch-nose" d="M50 55c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"/>
+                </svg>
+            </div>
+            <div class="loading-text">Cargando...</div>
+        </div>
+    </div>
     <section id="video-hero" class="video-section">
-        <video id="hero-video" autoplay muted loop playsinline>
+        <video id="hero-video" autoplay muted loop playsinline preload="auto">
             <source src="assets/stitch/v1-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
-            <source src="assets/stitch/v1.mp4" type="video/mp4">
+            <source src="assets/stitch/v1.mp4" type="video/mp4" >
         </video>
         <div class="hero-title">
             <span class="letter">N</span>
@@ -126,9 +139,9 @@
         </div>
     </section>
 
-    
+
     <section class="video-full-section">
-        <video class="full-video" autoplay muted loop playsinline>
+        <video class="full-video" autoplay muted loop playsinline preload="auto">
             <source src="assets/stitch/v2-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
             <source src="assets/stitch/v2.mp4" type="video/mp4">
         </video>
@@ -282,7 +295,7 @@
 
 
     <section class="video-audio-section">
-        <video class="video-with-audio" loop>
+        <video class="video-with-audio" autoplay playsinline loop preload="auto">
             <source src="assets/stitch/v3.mp4" type="video/mp4">
         </video>
     </section>
@@ -329,7 +342,7 @@
     <div class="spacer"></div>
 
     <section class="video-message-section">
-        <video class="message-video" autoplay muted loop playsinline>
+        <video class="message-video" autoplay muted loop playsinline preload="auto">
             <source src="assets/kory.mp4" type="video/mp4">
         </video>
     </section>
