--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
     <div id="home" class="home-section">
         <div class="mixed-grid">
             <div class="grid-item" data-speed="0.8">
-                <img src="assets/stitch/1.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/1.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="grid-item" data-speed="1.2">
-                <img src="assets/stitch/63.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/63.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="grid-item" data-speed="0.9">
-                <img src="assets/stitch/11.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/11.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="grid-item" data-speed="1.1">
-                <img src="assets/stitch/22.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/22.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="grid-item" data-speed="0.7">
-                <img src="assets/stitch/29.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/29.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="grid-item" data-speed="1.3">
-                <img src="assets/stitch/54.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/54.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="grid-item" data-speed="1.2">
-                <img src="assets/stitch/60.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/60.jpg" alt="Stitch Collection" loading="lazy">
             </div>
         </div>
     </div>
@@ -152,150 +152,150 @@
         <h2 class="collection-title">El Resto De Mi Colección</h2>
         <div class="collection-grid">
             <div class="collection-item">
-                <img src="assets/stitch/7.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/7.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/8.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/8.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/9.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/9.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/75.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/75.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/70.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/70.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/72.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/72.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/73.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/73.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/74.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/74.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/76.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/76.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/77.jpg" alt="Stitch Collection">
-            </div>
-
-            <div class="collection-item">
-                <img src="assets/stitch/78.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/79.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/80.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/81.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/82.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/83.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/84.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/85.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/86.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/77.jpg" alt="Stitch Collection" loading="lazy">
             </div>
 
             <div class="collection-item">
-                <img src="assets/stitch/87.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/78.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/88.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/79.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/89.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/80.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/90.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/81.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/91.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/82.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/65.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/83.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/66.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/84.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/67.jpg" alt="Stitch Collection">
-            </div>
-
-            <div class="collection-item">
-                <img src="assets/stitch/59.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/85.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/68.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/69.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/51.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/52.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/53.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/54.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/55.jpg" alt="Stitch Collection">
-            </div>
-            <div class="collection-item">
-                <img src="assets/stitch/56.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/86.jpg" alt="Stitch Collection" loading="lazy">
             </div>
 
             <div class="collection-item">
-                <img src="assets/stitch/57.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/87.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/58.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/88.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/50.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/89.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/3.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/90.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/4.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/91.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/5.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/65.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/6.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/66.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/44.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/67.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+
+            <div class="collection-item">
+                <img src="assets/stitch/59.jpg" alt="Stitch Collection" loading="lazy">
             </div>
             <div class="collection-item">
-                <img src="assets/stitch/45.jpg" alt="Stitch Collection">
+                <img src="assets/stitch/68.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/69.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/51.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/52.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/53.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/54.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/55.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/56.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+
+            <div class="collection-item">
+                <img src="assets/stitch/57.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/58.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/50.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/3.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/4.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/5.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/6.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/44.jpg" alt="Stitch Collection" loading="lazy">
+            </div>
+            <div class="collection-item">
+                <img src="assets/stitch/45.jpg" alt="Stitch Collection" loading="lazy">
             </div>
         </div>
         <div class="spacer"></div>
 
 
     <section class="video-audio-section">
-        <video class="video-with-audio" autoplay playsinline loop preload="auto">
+        <video class="video-with-audio" autoplay playsinline loop preload="none">
             <source src="assets/stitch/v3.mp4" type="video/mp4">
         </video>
     </section>
@@ -314,35 +314,35 @@
         </div>
         <div class="studio-content">
             <div class="studio-image">
-                <img src="assets/stitch/37.jpg" alt="Studio Process">
+                <img src="assets/stitch/37.jpg" alt="Studio Process" loading="lazy">
             </div>
             <div class="studio-image">
-                <img src="assets/stitch/38.jpg" alt="Studio Process">
+                <img src="assets/stitch/38.jpg" alt="Studio Process" loading="lazy">
             </div>
             <div class="studio-image">
-                <img src="assets/stitch/39.jpg" alt="Studio Process">
+                <img src="assets/stitch/39.jpg" alt="Studio Process" loading="lazy">
             </div>
             <div class="studio-image">
-                <img src="assets/stitch/40.jpg" alt="Studio Process">
+                <img src="assets/stitch/40.jpg" alt="Studio Process" loading="lazy">
             </div>
             <div class="studio-image">
-                <img src="assets/stitch/42.jpg" alt="Studio Process">
+                <img src="assets/stitch/42.jpg" alt="Studio Process" loading="lazy">
             </div>
             <div class="studio-image">
-                <img src="assets/stitch/41.jpg" alt="Studio Process">
+                <img src="assets/stitch/41.jpg" alt="Studio Process" loading="lazy">
             </div>
             <div class="studio-image">
-                <img src="assets/stitch/33.jpg" alt="Studio Process">
+                <img src="assets/stitch/33.jpg" alt="Studio Process" loading="lazy">
             </div>
             <div class="studio-image">
-                <img src="assets/stitch/34.jpg" alt="Studio Process">
+                <img src="assets/stitch/34.jpg" alt="Studio Process" loading="lazy">
             </div>
         </div>
     </section>
     <div class="spacer"></div>
 
     <section class="video-message-section">
-        <video class="message-video" autoplay muted loop playsinline preload="auto">
+        <video class="message-video" autoplay muted loop playsinline preload="none">
             <source src="assets/kory.mp4" type="video/mp4">
         </video>
     </section>
